--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,59 @@
+/*Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Baskervville:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Baskervville:ital@0;1&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
+/*Theme*/
+
+/*Geral*/
+:root {
+    --primary-color: #cf0f0f;
+    --primary-color-contrast: #fff;
+    --field-backgrond-color: #000;
+}
+
+/*Tema Claro*/
+.light-theme {
+    --page-background: linear-gradient (
+        180deg,
+        #fff 0%,
+        #fff 65%,
+        rgba(255, 255, 255, 0.75) 100%
+    );
+    --header-background-color: #e3e3e3;
+    --highLight-color: #000;
+    --featured-font-family: "Archivo", sans-serif;
+    --character-top-image-src: url("/assets/images/characters/kids-on-the-bike.svg");
+    --character-top-image-color: #fff;
+    --character-bottom-image-src: url("/assets/images/characters/inverted-world-monster.svg");
+    --character-bottom-image-color: #e5e5e5;
+    --background-lamp-image: url("/assets/images/backgrounds/lamps.png");
+    --footer-background-color: #b5bbbf;
+}
+
+/*Tema Escuro*/
+.dark-theme {
+    --page-background: linear-gradient (
+        180deg,
+        #050000 0%,
+        #130404 65%,
+        rgba(19, 1, 1, 0.75) 100%
+    );
+    --header-background-color: #220f0f;
+    --highLight-color: #fff;
+    --featured-font-family: "Rubik", sans-serif;
+    --character-bottom-image-src: url("/assets/images/characters/kids-on-the-bike.svg");
+    --character-bottom-image-color: rgba(255, 255, 255, 0.1);
+    --character-top-image-src: url("/assets/images/characters/inverted-world-monster.svg");
+    --character-top-image-color: #000;
+    --background-lamp-image: url("/assets/images/backgrounds/lamps-inverted.png");
+    --footer-background-color: #000;
+}
+
+/*Estilos genericos*/
+* {
+    box-sizing: border-box;
+
+    margin: 0;
+    padding: 0;
+}
