--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,11 +23,11 @@
     --header-background-color: #e3e3e3;
     --highLight-color: #000;
     --featured-font-family: "Archivo", sans-serif;
-    --character-top-image-src: url("/assets/images/characters/kids-on-the-bike.svg");
+    --character-top-image-src: url("../assets/images/characters/kids-on-the-bike.svg");
     --character-top-image-color: #fff;
-    --character-bottom-image-src: url("/assets/images/characters/inverted-world-monster.svg");
+    --character-bottom-image-src: url("../assets/images/characters/inverted-world-monster.svg");
     --character-bottom-image-color: #e5e5e5;
-    --background-lamp-image: url("/assets/images/backgrounds/lamps.png");
+    --background-lamp-image: url("../assets/images/backgrounds/lamps.png");
     --footer-background-color: #b5bbbf;
 }
 
@@ -42,11 +42,11 @@
     --header-background-color: #220f0f;
     --highLight-color: #fff;
     --featured-font-family: "Rubik", sans-serif;
-    --character-bottom-image-src: url("/assets/images/characters/kids-on-the-bike.svg");
+    --character-bottom-image-src: url("../assets/images/characters/kids-on-the-bike.svg");
     --character-bottom-image-color: rgba(255, 255, 255, 0.1);
-    --character-top-image-src: url("/assets/images/characters/inverted-world-monster.svg");
+    --character-top-image-src: url("../assets/images/characters/inverted-world-monster.svg");
     --character-top-image-color: #000;
-    --background-lamp-image: url("/assets/images/backgrounds/lamps-inverted.png");
+    --background-lamp-image: url("../assets/images/backgrounds/lamps-inverted.png");
     --footer-background-color: #000;
 }
 
@@ -57,3 +57,124 @@
     margin: 0;
     padding: 0;
 }
+
+h1,
+h2,
+h3 {
+    font-family: var(--featured-font-family);
+    text-transform: uppercase;
+
+    font-size: 3rem;
+
+    margin-bottom: 40px;
+    color: var(--primary-color);
+}
+
+p {
+    color: var(--highLight-color);
+}
+
+
+p,
+input,
+textarea,
+label {
+    font-family: "Baskervville", serif;
+}
+    
+button {
+    cursor: pointer;
+    transition: background 1s;
+
+    padding: 16px 32px;
+
+    font-family: var(--featured-font-family);
+    font-weight: 900;
+    font-size: 1.25rem;
+    text-transform: uppercase;
+
+    background-color: transparent;
+}
+
+/*Header (Cabeçalho)*/
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+
+    min-height: 850px;
+
+    background-color: var(--header-background-color);
+}
+
+header::before {
+    content: "";
+    background-image: url("../images/banner/florest.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center 90%;
+    filter: saturate(0);
+    opacity: 0.2;
+
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+}
+
+.header-content {
+    text-align: center;
+    padding: 80px 20px;
+    max-width: 700px;
+    z-index: 2;
+}
+
+.header-content img {
+    width: 80%;
+}
+
+.header-content p {
+    margin: 30px 0 50px;
+}
+
+.header-content button {
+    border: 3px solid var(--primary-color);
+    color: var(--primary-color);
+}
+
+.header-content button:hover {
+    background-color: var(--primary-color);
+    color: var(--primary-color-contrast);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
