--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,11 +23,11 @@
     --header-background-color: #e3e3e3;
     --highLight-color: #000;
     --featured-font-family: "Archivo", sans-serif;
-    --character-top-image-src: url("../assets/images/characters/kids-on-the-bike.svg");
+    --character-top-image-src: url("/assets/images/characters/kids-on-the-bike.svg");
     --character-top-image-color: #fff;
-    --character-bottom-image-src: url("../assets/images/characters/inverted-world-monster.svg");
+    --character-bottom-image-src: url("/assets/images/characters/inverted-world-monster.svg");
     --character-bottom-image-color: #e5e5e5;
-    --background-lamp-image: url("../assets/images/backgrounds/lamps.png");
+    --background-lamp-image: url("/assets/images/backgrounds/lamps.png");
     --footer-background-color: #b5bbbf;
 }
 
@@ -42,11 +42,11 @@
     --header-background-color: #220f0f;
     --highLight-color: #fff;
     --featured-font-family: "Rubik", sans-serif;
-    --character-bottom-image-src: url("../assets/images/characters/kids-on-the-bike.svg");
+    --character-bottom-image-src: url("/assets/images/characters/kids-on-the-bike.svg");
     --character-bottom-image-color: rgba(255, 255, 255, 0.1);
-    --character-top-image-src: url("../assets/images/characters/inverted-world-monster.svg");
+    --character-top-image-src: url("/assets/images/characters/inverted-world-monster.svg");
     --character-top-image-color: #000;
-    --background-lamp-image: url("../assets/images/backgrounds/lamps-inverted.png");
+    --background-lamp-image: url("/assets/images/backgrounds/lamps-inverted.png");
     --footer-background-color: #000;
 }
 
@@ -158,14 +158,67 @@ header::before {
     max-width: 900px;
 }
 
-#top-characters {
+.world-characters#top-characters {
     height: 100%;
+    bottom: -3px;
 
     background-color: var(--character-top-image-color);
-    mask: var(--character-top-image-src) bottom / contain no-repeat;
-    --webkit-mask: var(--character-top-image-src) bottom / contain no-repeat;
-
+    mask: var(--character-top-image-src) bottom / 100% no-repeat;
+    -webkit-mask: var(--character-top-image-src) bottom / 100% no-repeat;
 }
+
+.world-characters#bottom-characters {
+    height: 500px;
+    top: 3px;
+
+    position: relative;
+    transform: rotateZ(180deg) scaleX(-1);
+
+    background-color: var(--character-bottom-image-color);
+    mask: var(--character-top-image-src) bottom / 100% no-repeat;
+    -webkit-mask: var(--character-bottom-image-src) bottom / 100% no-repeat;
+}
+
+
+/*Conteúdo Principal*/
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+section {
+    display: flex;
+    justify-content: space-between;
+
+    margin-bottom: 95px;
+}
+
+.container {
+    max-width: 1200px;
+}
+
+#section-inverted-world {
+    align-items: center;
+}
+
+#section-inverted-world  .section-texts {
+    width: 50%;
+}
+
+#section-inverted-world .section-texts h2 {
+    max-width: 300px;
+} 
+
+
+
+
+
+
+
+
 
 
 
