--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,6 +189,8 @@ main {
     position: relative;
 }
 
+/*seção do Mundo invertido*/
+
 section {
     display: flex;
     justify-content: space-between;
@@ -208,18 +210,78 @@ section {
     width: 50%;
 }
 
-#section-inverted-world .section-texts h2 {
+#section-inverted-world .section-texts h1 {
     max-width: 300px;
 } 
 
+/*Seção do trailer*/
 
+#section-stranger-things-trailer .section-texts {
+    width: 50%;
+    text-align: right;
+}
 
+#section-stranger-things-trailer .section-texts h2 {
+    max-width: 425px;
+    display: inline-block;
+}
 
+#section-stranger-things-trailer .video-frame {
+   background-color: var(--primary-color);
+}
 
+#section-stranger-things-trailer .video-frame iframe {
+    position: relative;
 
+    bottom: 24px;
+    left: 24px;
 
+    border: 2px solid;
+    border-image: linear-gradient(
+        var(--primary-color),
+        var(--primary-color-contrast)
+    );
 
+    border-image-slice: 10;
+ }
 
+/*Galeria de imagens*/
+
+#section-stranger-things-gallery {
+    width: 100%;
+    justify-content: center;
+    background: var(--background-lamp-image) 120% / 50% no-repeat;
+}
+
+#section-stranger-things-gallery .container {
+    width: 100%;
+}
+
+#section-stranger-things-gallery .container h2 {
+    width: 800px;
+}
+
+#section-stranger-things-gallery .gallery-container {
+    display: flex;
+    gap: 50px;
+    padding-left: 20px;
+}
+
+#section-stranger-things-gallery .gallery-image {
+    width: 250px;
+    height: 250px;
+
+    outline: 20px solid var(--highLight-color);
+    border: 3px solid var(--primary-color);
+    box-sizing: initial;
+}
+
+#section-stranger-things-gallery .gallery-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 10px solid var(--highLight-color);
+}
 
 
 
