--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,6 +96,26 @@ button {
     background-color: transparent;
 }
 
+input,
+textarea {
+    border: 2px solid var(--primary-color-contrast);
+    background-color: var(--field-backgrond-color);
+    color: var(--primary-color-contrast);
+    padding: 8px;
+    margin-bottom: 24px;
+    font-size: 1rem;
+}
+
+label {
+    margin-bottom: 8px;
+}
+
+input:focus-visible,
+textarea:focus-visible {
+    outline: none;
+    border-color: black;
+}
+
 /*Header (Cabeçalho)*/
 
 header {
@@ -187,6 +207,16 @@ main {
     flex-direction: column;
     align-items: center;
     position: relative;
+}
+
+main::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: var(--page-background) no-repeat, url("/assets/images/backgrounds/florest.png") no-repeat;
+    background-size: cover;
+    z-index: -1;
 }
 
 /*seção do Mundo invertido*/
@@ -283,12 +313,74 @@ section {
     border: 10px solid var(--highLight-color);
 }
 
+/*Seção do formulario*/
 
+#section-form {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 40px;
+}
 
+#section-form h2 {
+    width: 600px;
+}
 
+#section-form .form-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+#section-form .form-content h3 {
+    color: var(--highLight-color);
+    flex-basis: 30%;
+    text-align: left;
+    margin: 0;
+}
 
+#section-form .form-content h3 span {
+    color: var(--primary-color);
+}
 
+#section-form .form-container {
+    flex-basis: 50%;
+    position: relative;
+}
+
+#section-form .form-container::after {
+    content: "";
+    background-color: var(--highLight-color);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    z-index: -1;
+}
+
+#section-form .form-container form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 24px;
+    background-color: var(--primary-color);
+    color: var(--primary-color-contrast);
+    text-align: left;
+}
+
+#section-form .form-container form button {
+    border: none;
+    background-color: var(--field-backgrond-color);
+    color: var(--primary-color-contrast);
+    max-width: 300px;
+    align-self: center;
+}
+
+#section-form .form-container form button:hover {
+    background-color: var(--primary-color-contrast);
+    color: var(--field-backgrond-color);
+}
 
 
 
